# agentos

./: .env.example  .gitignore
.claude/: settings.local.json
crates/agentos-core/: Cargo.toml
crates/agentos-core/src/: config.rs  runner.rs  task_workspace.rs
crates/agentos-core/src/approve/: mod.rs
crates/agentos-core/src/channels/: attachments.rs  feishu.rs  mod.rs  telegram.rs
crates/agentos-core/src/channels/feishu/: event.rs  long_connection.rs  mod.rs  proto.rs  websocket.rs
crates/agentos-core/src/config/: memory.rs  mod.rs  normalize.rs  orchestrator.rs  subagents.rs
crates/agentos-core/src/crons/: mod.rs
crates/agentos-core/src/gateway/: mod.rs
crates/agentos-core/src/guardrails/: mod.rs
crates/agentos-core/src/loop/: approval.rs  delegate.rs  escalate.rs  items.rs  mod.rs  telemetry.rs
crates/agentos-core/src/memory/: accounting.rs  authorize.rs  hybrid.rs  mod.rs  query.rs  sqlite.rs  sqlite_vec.rs
crates/agentos-core/src/orchestrator/: commands.rs  max.rs  min.rs
crates/agentos-core/src/runner/: task_session.rs
crates/agentos-core/src/runtime/: mod.rs  tools_config.rs
crates/agentos-core/src/skills/: mod.rs  planner.rs  skill_creator.rs  web_research.rs  workspace.rs
crates/agentos-core/src/tools/: builtin.rs  memory.rs  mod.rs  registry.rs
crates/agentos-core/src/tools/builtin/: common.rs  cron.rs  file.rs  http.rs  mod.rs  shell.rs  skill_create.rs
crates/agentos-llm/: Cargo.toml
crates/agentos-llm/src/: lib.rs
crates/agentos-llm/src/providers/: anthropic.rs  deepseek.rs  mod.rs  ollama.rs  openai.rs
scripts/: install-agentos.sh  install-toolchain.sh
workspace/: agent.toml
(+22 files in other folders)
