[package]
name = "agentos-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-interfaces.workspace = true
agentos-llm.workspace = true
agentos-proto.workspace = true
async-trait.workspace = true
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2", "json", "multipart"] }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "fs"] }
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
agentos-interfaces = { workspace = true, features = ["test-support"] }
criterion = "0.5"

[[bench]]
name = "loop_overhead"
harness = false
