[package]
name = "agentos-llm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
agentos-interfaces.workspace = true
agentos-proto.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "http2"] }
rand = "0.8"
